=============================================================
Version 3.3.1
=============================================================

    - Feature: Outsourcing of the toolbox via webservice
    - Feature: Setting up a modal for the plugin update
    - Bugfix: Retrieving the main shop url for feed and cron urls

=============================================================
Version 3.3.0
=============================================================

    - Feature: Integration of the new connection process

=============================================================
Version 3.2.4
=============================================================

    - Feature: [import] Add compatibility with 1.7.7.x versions of PrestaShop
    - Bugfix: [import] Correction of the SQL query retrieving the product by an attribute value
    - Bugfix: Use of the native SQL count to retrieve the number of elements in the grids

=============================================================
Version 3.2.3
=============================================================

    - Feature: Adding new links to the Lengow Help Center and Support
    - Feature: Adding customer_vat_number in admin order detail & lengow_order table
    - Bugfix: Always load iframe over HTTPS

=============================================================
Version 3.2.2
=============================================================

    - Feature: [import] Addition of order types in the order management screen
    - Feature: [import] Addition of the currency conversion option in the order option panel
    - Feature: [import] Integration of the region code in the delivery and billing addresses
    - Bugfix: Add isset in case some var were unset causing multiple php notice
    - Bugfix: Update of the access token when recovering an http 401 code

=============================================================
Version 3.2.1
=============================================================
