@@ -368,6 +368,7 @@ admin.order.is_business|Business
 admin.order.is_delivered_by_marketplace|Shipped by marketplace
 admin.order.message|Message
 admin.order.imported_at|Imported at
+admin.order.json_format|JSON format
 admin.order.cancel_and_reimport|Re-import order
 admin.order.check_cancel_and_reimport|Do you really want to re-import the order?
 admin.order.synchronize_id|Synchronize ID
